--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#2A4494</color>
+    <color name="colorPrimaryDark">#224870</color>
+    <color name="colorPrimaryLight">#4EA5D9</color>
+    <color name="colorAccent">#44CFCB</color>
+    <color name="colorDark">#122C34</color>
 </resources>
