--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         app:titleTextColor="@color/colorPrimary" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/usernameField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_toolbar"
@@ -25,10 +25,10 @@
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/passwordField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/username"
+        android:layout_below="@+id/usernameField"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="11dp"
@@ -41,7 +41,7 @@
         android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@+id/password"
+        android:layout_below="@+id/passwordField"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
@@ -49,7 +49,7 @@
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textAllCaps="false"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorButtonShade"
         android:enabled="false"/>
 
     <Button
@@ -64,7 +64,7 @@
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textAllCaps="false"
-        android:background="@color/colorPrimaryLight"
+        android:background="@color/colorButtonShadeLight"
         android:enabled="false"/>
 
 </RelativeLayout>
