-created demand and item model -added jackson mapper for mapping json string to object -created demand list -moved authorization token outside from function parameter -added custom image loader

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,10 +6,10 @@
         app:startDestination="@+id/navigation_home">
 
     <fragment
-            android:id="@+id/navigation_home"
-            android:name="sk.koronapp.ui.home.HomeFragment"
-            android:label="@string/title_home"
-            tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_home"
+        android:name="sk.koronapp.ui.home.DemandFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/demand_list" />
 
     <fragment
             android:id="@+id/navigation_dashboard"
