--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="sk.koronapp.ui.home.DemandFragment"
+        android:name="sk.koronapp.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/demand_list" />
+        tools:layout="@layout/home_fragment" />
 
     <fragment
             android:id="@+id/navigation_dashboard"
