--- a/app/src/main/res/layout/demand_list_item.xml
+++ b/app/src/main/res/layout/demand_list_item.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/demand_list_item"
+    android:layout_margin="5dp"
     android:baselineAligned="false"
     android:orientation="horizontal"
-    android:padding="5dp">
+    android:padding="2dp">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -15,13 +15,14 @@
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:gravity="center"
+        android:id="@+id/demand_image_layout"
         android:orientation="horizontal">
 
         <ProgressBar
             android:id="@+id/demand_progress_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/demand_avatar"
