--- a/app/src/main/res/layout/demand_list_item_avatar_right.xml
+++ b/app/src/main/res/layout/demand_list_item_avatar_right.xml
@@ -3,18 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/demand_list_item"
+    android:layout_margin="5dp"
     android:baselineAligned="false"
     android:orientation="horizontal"
-    android:padding="5dp">
+    android:padding="2dp">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
         android:layout_weight="4"
         android:orientation="vertical"
+        android:id="@+id/demand_image_layout"
         tools:ignore="UselessParent">
 
         <TextView
@@ -50,7 +49,7 @@
             android:id="@+id/demand_progress_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/demand_avatar"
