--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -2,28 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@color/colorPrimaryLight"
-    android:gravity="bottom"
-    android:orientation="vertical"
-    android:paddingLeft="20dp"
-    android:paddingBottom="20dp">
+    android:layout_height="match_parent"
+    android:layout_centerHorizontal="true"
+    android:gravity="top"
+    android:orientation="vertical">
 
-    <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/drawer_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/avatars" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@color/colorPrimaryLight"
+        android:gravity="center"
+        android:padding="20dp">
+
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/drawer_image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:src="@mipmap/ic_launcher"
+            tools:srcCompat="@tools:sample/avatars" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/drawer_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="@string/username_placeholder"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="50sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/drawer_address"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="@string/address_placeholder"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="25sp" />
 
 </LinearLayout>
