-added style to search bar -filtering demands with state "created"

--- a/app/src/main/res/layout/available_demands_fragment.xml
+++ b/app/src/main/res/layout/available_demands_fragment.xml
@@ -11,6 +11,7 @@
         android:id="@+id/demand_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/search_view"
         android:inputType="text"
         app:queryHint="Address..." />
 
