--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/mobile_navigation"
-        app:startDestination="@+id/navigation_home">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mobile_navigation"
+    app:startDestination="@+id/navigation_home">
 
     <fragment
         android:id="@+id/navigation_home"
@@ -12,14 +12,18 @@
         tools:layout="@layout/home_fragment" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_available_demands"
         android:name="sk.koronapp.ui.available_demands.AvailableDemands"
         android:label="@string/title_available_demands"
         tools:layout="@layout/available_demands_fragment" />
 
-    <fragment
-            android:id="@+id/navigation_notifications"
-            android:name="sk.koronapp.ui.notifications.NotificationsFragment"
-            android:label="@string/title_notifications"
-            tools:layout="@layout/fragment_notifications" />
+    <activity
+        android:id="@+id/navigation_new_demand"
+        android:name="sk.koronapp.ui.demand_detail.DemandDetailActivity"
+        android:label="@string/title_new_demand"
+        tools:layout="@layout/activity_demand_detail">
+        <argument
+            android:name="type"
+            android:defaultValue="new" />
+    </activity>
 </navigation>
