--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
 
     <color name="colorButtonShade">#939393</color>
     <color name="colorButtonShadeLight">#D8D8D8</color>
+
+    <color name="colorTransparent">#00000000</color>
 </resources>
