--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="demand_list_date">14sp</dimen>
     <dimen name="demand_list_address">14sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
