--- a/app/src/main/res/layout/activity_demand_detail.xml
+++ b/app/src/main/res/layout/activity_demand_detail.xml
@@ -83,13 +83,29 @@
 
                 </LinearLayout>
 
-                <com.android.volley.toolbox.NetworkImageView
-                    android:id="@+id/demand_avatar"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:inputType="text"
-                    app:queryHint="Address..." />
+                    android:layout_weight="2"
+                    android:gravity="top"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/demand_detail_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/demand_not_accepted"
+                        android:textAppearance="?attr/textAppearanceListItem" />
+
+                    <com.android.volley.toolbox.NetworkImageView
+                        android:id="@+id/demand_avatar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        app:queryHint="Address..." />
+
+                </LinearLayout>
 
             </LinearLayout>
 
